10월 2일 중간 데모 최종